[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slancha"
version = "0.1.0"
description = "Python SDK for the Slancha AI inference platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Slancha", email = "dev@slancha.ai" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://slancha.ai"
Documentation = "https://slancha.ai/docs"
Repository = "https://github.com/loganclaw9000/slancha-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["slancha"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
